<resources>
    <string name="app_name">project</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio">Bio</string>
    <string name="edit_name">Edit Name</string>
    <string name="gender">Gender</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>


    <string-array name="categories">
        <item name="Food and Beverage">Food and Beverage</item>
        <item name="Medical Bill">Medical Bill</item>
        <item name="Transportation">Transportation</item>
        <item name="Rent">Rent</item>
        <item name="Phone Bill">Phone Bill</item>
        <item name="Water Bill">Water Bill</item>
        <item name="Gas Bill">Gas Bill</item>
        <item name="Electricity Bill">Electricity Bill</item>
        <item name="Internet Bil">Internet Bill</item>
        <item name="Television Bill">Television Bill</item>
        <item name="Insurance">Insurance</item>
        <item name="Education">Education</item>
        <item name="Pets">Pets</item>
        <item name="Shopping">Shopping</item>
        <item name="Fitness">Fitness</item>
        <item name="Makeup">Makeup</item>
        <item name="Car Maintenance">Car Maintenance</item>
        <item name="Entertainment">Entertainment</item>
        <item name="Debt">Debt</item>
        <item name="Loan">Loan</item>
        <item name="Household Appliances">Household Appliances</item>
        <item name="Personal Items">Personal Items</item>
        <item name="Gifts">Gifts</item>
        <item name="Donations">Donations</item>
        <item name="Other">Other</item>
    </string-array>
</resources>