<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:padding="20dp"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".edit_profile">

    <LinearLayout
        android:layout_weight="0.1"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:id="@+id/idback"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:src="@drawable/arrow_back"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/edit_profile"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"/>
        <TextView
            android:id="@+id/idsaveprofile"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:background="@drawable/add_photo"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        />

    <EditText
        android:layout_weight="0.2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/bio"
        android:inputType="text"
        android:background="@drawable/backdrop"
        android:paddingStart="20dp"
        android:layout_marginBottom="15dp"
        android:paddingEnd="20dp"/>

    <EditText
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/backdrop"
        android:hint="@string/edit_name"
        android:inputType="text"
        android:layout_marginBottom="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <EditText
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/gender"
        android:background="@drawable/backdrop"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:id="@+id/idchangepwd"
        android:layout_weight="0.15"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:text="@string/change_password"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>



</LinearLayout>